[package]
name = "ipwatcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "signal"] }

# Use rustls, not native-tls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Disable defaults and pick tokio + rustls explicitly
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["formatting"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.9"

